# treef

./: .gitignore  LICENSE  README.md  publish-to-pypi.yml  pyproject.toml  setup.cfg
.github/workflows/: publish-to-pypi.yml
my-test-project/: project.treef  project1.treef
tests/: test_builder.py  test_parser.py
treef/: __main__.py  builder.py  cli.py  exceptions.py  logger.py  parser.py
treef.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
