[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "treef"
version = "0.1.0"
description = "A tool to create project structures from .tree files."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
dependencies = [
    "click>=8.0",  
]

[project.scripts]
treef = "treef.cli:main" # This is the magic line!