[metadata]
# This section is mostly for backward compatibility.
# pyproject.toml is the primary source for metadata.
name = treef

[options]
# This tells setuptools to automatically find all Python packages
# (directories with an __init__.py file) in your project.
packages = find:

# This specifies that your package's code is in the root directory.
# If you had a src/treef layout, you would put "where = src" here.
package_dir =
    = .

[options.packages.find]
# This tells the 'find:' command where to look.
# The '.' means it will look in the root directory.
where = .